fix for issue #11 in verifykerneldump.yml

--- a/tasks/verifykerneldump.yml
+++ b/tasks/verifykerneldump.yml
@@ -15,3 +15,9 @@
         maximum_size: "{{ cogito_pagefilesize }}"
         state: present
         automatic: false
+    - name: Set Startup and Recovery settings to use Kernel-only Memory Dump
+      win_regedit:
+        path: HKLM:\SYSTEM\CurrentControlSet\Control\CrashControl
+        name: CrashDumpEnabled
+        data: 2
+        type: dword
